# fmri-fm

./: .gitignore  README.md  pyproject.toml  setup.sh
config/: HCP_large_pt1.yaml  config.yaml
sbatch/: accel.slurm  accel_finetune_HCP.slurm  accel_prepHCP.slurm  prep_mindeye_downstream.slurm  pretrain_HCP.sh
scripts/: HCP_downstream.ipynb  HCP_downstream_finetune.ipynb  HCP_finetuning.ipynb  main.ipynb  mindeye_downstream.ipynb  mindeye_finetuning.ipynb
src/: HCP_downstream_raw.ipynb  env.py  mindeye_downstream.ipynb  mindeye_finetuning.ipynb  utils.py
src/mae_utils/: flat.py  logging.py  losses.py  models.py  visualize.py
src/mindeye_utils/generative_models/sgm/modules/autoencoding/: temporal_ae.py
src/sbatch/: accel_finetuning_mindeye.slurm  accel_test.slurm  mindeye_downstream.slurm
