[project]
name = "fmri-fm"
version = "0.1.0"
description = "Sophont fMRI foundation model"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate",
    "boto3==1.34.57",
    "clip",
    "decord",
    "diffusers==0.23.0",
    "einops",
    "ffmpeg-python",
    "ftfy",
    "h5py",
    "ipywidgets",
    "jupyter",
    "jupyterlab",
    "jupyterlab-nvdashboard",
    "kornia",
    "matplotlib",
    "nibabel",
    "nilearn",
    "numpy<2",
    "omegaconf",
    "open-clip-torch",
    "opencv-python==4.6.0.66",
    "pandas",
    "pytorch-lightning==2.0.1",
    "regex",
    "scikit-image",
    "scikit-learn",
    "scipy",
    "smart-open",
    "torchmetrics==1.3.0.post0",
    "torchvision",
    "tqdm",
    "transformers==4.44.2",
    "wandb",
    "webdataset",
    "xformers==0.0.22.post7",
]

[tool.uv.sources]
clip = { git = "https://github.com/openai/CLIP.git", rev = "dcba3cb2e2827b402d2701e7e1c7d9fed8a20ef1" }
